--- a/day-11/Cargo.toml
+++ b/day-11/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-indicatif = "0.17.9"
 itertools = "0.13.0"
-rayon = "1.10.0"
+memoize = "0.4.2"
 utils = { version = "0.1.0", path = "../utils" }
