--- a/day-12/Cargo.toml
+++ b/day-12/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "utils"
+name = "day-12"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 array2d = "0.3.2"
 itertools = "0.13.0"
+utils = { version = "0.1.0", path = "../utils" }
