--- a/day-15/Cargo.toml
+++ b/day-15/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-array2d = "0.3.2"
+itertools = "0.13.0"
 utils = { version = "0.1.0", path = "../utils" }
